# Docura

./: ADHD_FOCUS_MODE.md  BUGFIX_SAVE_DIALOGS.md  CHANGELOG-IMPROVEMENTS.md  CHANGES_IMAGE_HANDLING.md  CHANGES_SUMMARY.md  COMPACT_WELCOME_UPDATE.md  COMPLETE_DROPBOX_INTEGRATION_SUMMARY.md  DESKTOP_ENVIRONMENT_INTEGRATIONS.md  DROPBOX_APP_FOLDER_UPDATE.md  DROPBOX_SYNC_CELEBRATION.md  DROPBOX_SYNC_STEP1_COMPLETE.md  EMAIL_TO_DHH.md  EMAIL_TO_DHH_READY.txt  EXPORT_FEATURES.md  FIXES_APPLIED.md  FIX_DROPBOX_APP_SETUP.md  IMPLEMENTATION_SUMMARY.md  NOTICEABLE_TYPEWRITER_UPDATE.md  OAUTH_WEB_REDIRECT_COMPLETE.md  OMAKASE_ADVERTISING_COMPLETE.md  OMAKASE_FEATURE_SUMMARY.md  OMAKASE_TO_OMARCHY_UPDATE.md  OMARCHY_THEMES_COMPLETE.md  PHASE_1_COMPLETE.md  PLASMA_INTEGRATION_COMPLETE.md  QUICK_BUILD_SETUP.md  README.md  SESSION_SUMMARY_OCT_12.md  TEST_OVERLAY_MODE.md  TYPEWRITER_MODE_ENHANCED.md  USE_TEMP_ACCESS_TOKEN.md  VICTORY_CELEBRATION.md  WARP.md  WELCOME_SCREEN_IMPLEMENTATION.md  WE_BEAT_TYPORA.md  WIKI_COMPLETE.md  build-prod.sh  build.sh  dev.sh  index.html  (+9 more)
docs/: CI_CD_AUTOMATION.md  COMPACT_WELCOME_GUIDE.md  DROPBOX_SYNC_INTEGRATION.md  FLAMETHROWER_INTEGRATION.md  FLAMETHROWER_SUMMARY.md  FOCUS_TYPEWRITER_GUIDE.md  IMAGE_FEATURE_SUMMARY.md  IMAGE_HANDLING.md  IMAGE_LOADING.md  INTERACTIVE_CHECKBOXES.md  OMAKASE_INTEGRATION.md  SCROLLABLE_CONTAINER.md  WELCOME_SCREEN_PREVIEW.md  WIKI_README.md  donate_me.html  index.html  oauth-redirect.html  privacy.html
markups/: AI_SOLO_ADVANTAGE.md  BEFORE_SENDING_TO_DHH.md  BLOG_POSTS_ADDED.md  BLOG_POST_DOCUMENT_FORMATS.md  BUGFIX_OMARCHY_VDITOR_LIVE_MODE.md  CHANGELOG.md  CICD_IMPLEMENTATION_SUMMARY.md  DAY_2_COMPLETE_SUMMARY.md  DAY_2_EVENING_IMPROVEMENTS.md  DEBUG_FOCUS_TYPEWRITER.md  DHH_ENDORSEMENT.md  DOWNLOADS_SECTION_UPDATE.md  DROPBOX_CREDENTIALS_SETUP.md  DROPBOX_IMPLEMENTATION_GUIDE.md  DROPBOX_PRODUCTION_BUILD.md  DROPBOX_READY_TO_GO.md  DROPBOX_SETUP_QUICK_START.md  DROPBOX_SYNC_COMPLETE.md  EMERGENCY_FIX_NEW_FILE.md  FLAMETHROWER_COMPLETE.md  FLAMETHROWER_QUICKSTART.md  FOCUS_TYPEWRITER_MODE.md  IMAGE_FORMATS_REFERENCE.md  OAUTH_SCOPE_FIX.md  OMAKASE_ADVERTISING_COMPLETE.md  OMARCHY_DUAL_SUPPORT.md  OVERLAY_APPROACH.md  PHASE_2_COMPLETE.md  PHILOSOPHY_SOFTWARE_CRAFTSMANSHIP.md  README.md  RELEASE_COMMANDS.md  RELEASE_v1.0.1_DESCRIPTION.md  REPOSITORY_CLEANUP_DAY5.md  RESPECTFUL_UX_UPDATE.md  SIDEBAR_DROPBOX_INTEGRATION.md  SMART_FILENAME_FEATURE.md  STEP_1_COMPLETE_SUMMARY.md  STEP_2_COMPLETE_SUMMARY.md  THEMES.md  THEME_SELECTOR_UPDATE.md  (+11 more)
scripts/: build-prod.sh  install-dependencies.sh
src-tauri/: Cargo.toml  docura.desktop  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: dropbox_sync.rs  lib.rs  main.rs  plasma_sync.rs
(+86 files in other folders)
