[package][package]

name = "app"name = "a[dependencies]

version = "0.1.0"serde_json = "1.0"

description = "A Tauri App"serde = { version = "1.0", features = ["derive"] }

authors = ["you"]log = "0.4"

license = ""tauri = { version = "2.8.5" }

repository = ""tauri-plugin-log = { version = "2.4.1" }

edition = "2021"tauri-plugin-dialog = { version = "2.4.1" }

rust-version = "1.77.2"tauri-plugin-fs = { version = "2.4.1" }

walkdir = "2.3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.htmltokio = { version = "1.0", features = ["full"] }

anyhow = "1.0" = "0.1.0"

[lib]description = "A Tauri App"

name = "app_lib"authors = ["you"]

crate-type = ["staticlib", "cdylib", "rlib"]license = ""

repository = ""

[build-dependencies]edition = "2021"

tauri-build = { version = "2.4.1" }rust-version = "1.77.2"



[dependencies]# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

serde_json = "1.0"

serde = { version = "1.0", features = ["derive"] }[lib]

log = "0.4"name = "app_lib"

tauri = { version = "2.8.5" }crate-type = ["staticlib", "cdylib", "rlib"]

tauri-plugin-log = { version = "2.4.1" }

tauri-plugin-dialog = { version = "2.4.1" }[build-dependencies]

tauri-plugin-fs = { version = "2.4.1" }tauri-build = { version = "2.4.1", features = [] }

walkdir = "2.3"

tokio = { version = "1.0", features = ["full"] }[dependencies]

anyhow = "1.0"serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.8.5", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
walkdir = "2.3"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
