[package]
name = "docura"
version = "1.0.0"
description = "A modern, lightweight markdown editor built with Tauri"
authors = ["Docura Team"]
license = "Apache-2.0"
repository = "https://github.com/WOF-Softwares/Docura"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "docura_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.8.5", features = ["protocol-asset"] }
tauri-plugin-log = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
walkdir = "2.3"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
